--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-pydot==1.4.1
-asttokens==2.0.3
-objgraph==3.4.1
-networkx==2.4
-graphviz~=2.40.1
-matplotlib==3.2.0
-requests==2.23.0
-stackimpact==1.2.7
+pandas==1.0.5
 PyDriller==1.12
-dataclasses==0.7
+graphviz==0.13.2
+networkx==2.4
+astunparse==1.6.3
+objgraph==3.4.1
 tqdm==4.48.0
-astunparse~=1.6.3
+requests==2.23.0
+asttokens==2.0.3
+matplotlib==3.2.0
+stackimpact==1.2.7
+pydot==1.4.1
+dataclasses==0.7
