Implement pfg building using subprocess & Refactor config

--- a/bug-finder-plugin/src/main/resources/META-INF/plugin.xml
+++ b/bug-finder-plugin/src/main/resources/META-INF/plugin.xml
@@ -16,7 +16,7 @@
                          groupBundle="BugFinderPythonBundle"
                          enabledByDefault="true"
                          level="WARNING"
-                         implementationClass="org.jetbrains.research.BugFinderInspection"
+                         implementationClass="org.jetbrains.research.ide.BugFinderInspection"
                          displayName="BugFinder: found similar pattern"
                          shortName="BugFinder"/>
     </extensions>
