--- a/bug-finder-plugin/src/main/resources/META-INF/plugin.xml
+++ b/bug-finder-plugin/src/main/resources/META-INF/plugin.xml
@@ -11,6 +11,7 @@
     <depends>com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <postStartupActivity implementation="org.jetbrains.research.ide.BugFinderStartupActivity"/>
         <localInspection language="Python"
                          groupPath="Python"
                          groupBundle="BugFinderPythonBundle"
