--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+DebuggerVisitor.kt
