--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,7 @@
     <depends>com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <postStartupActivity implementation="org.jetbrains.research.plugin.ide.BugFinderStartupActivity"/>
         <localInspection language="Python"
                          groupPath="Python"
                          groupName="BugFinder plugin"
