Remove PatternDirectedAcyclicGraph Merge VariablesLabelsMarking.kt and ActionsPreprocessing.kt Rename :marking to :preprocessing ! User input in console doesn't working for now !

--- a/preprocessing/src/main/resources/META-INF/plugin.xml
+++ b/preprocessing/src/main/resources/META-INF/plugin.xml
@@ -12,7 +12,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
-        <appStarter implementation="org.jetbrains.research.marking.ActionsPreprocessing"/>
+        <appStarter implementation="org.jetbrains.research.preprocessing.PreprocessingRunner"/>
     </extensions>
 
 </idea-plugin>
