--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -4,8 +4,13 @@
     <vendor>JetBrains Research</vendor>
 
     <description><![CDATA[
-        A static code analysis tool that tries to find complicated,
-        semantic, and, as far as possible, buggy patterns in your Python code.
+        A static code analysis tool for locating and fixing complicated, semantic,
+        and (as far as possible) buggy patterns in your Python code. We use
+        graphs-based patterns, which were gathered from 120 GitHub repositories by
+        code-change-miner tool. Behind the scenes, the plugin runs an inspection which builds
+        isomorphic mappings between fine-grained Program Dependence Graphs
+        of mined patterns and a similar graph of your code, and then suggests
+        you a relevant quick-fix to repair the highlighted code fragment.
     ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
