--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -4,13 +4,18 @@
     <vendor>JetBrains Research</vendor>
 
     <description><![CDATA[
+        <p>
         A static code analysis tool for locating and fixing complicated, semantic,
-        and (as far as possible) buggy patterns in your Python code. We use
-        graphs-based patterns, which were gathered from 120 GitHub repositories by
+        and (as far as possible) buggy patterns in your Python code.
+        </p>
+        <br>
+        <p>
+        We use graphs-based patterns, which were gathered from <b>120 GitHub repositories</b> by
         code-change-miner tool. Behind the scenes, the plugin runs an inspection which builds
         isomorphic mappings between fine-grained Program Dependence Graphs
         of mined patterns and a similar graph of your code, and then suggests
         you a relevant quick-fix to repair the highlighted code fragment.
+        </p>
     ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
