Hotfix: fix edit actions.json in `choice` pattern Fix shortName for inspection

--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -30,7 +30,7 @@
                          level="WARNING"
                          implementationClass="org.jetbrains.research.plugin.ide.BugFinderInspection"
                          displayName="BugFinder"
-                         shortName="BugFinder"/>
+                         shortName="BugFinderInspection"/>
     </extensions>
 
 </idea-plugin>
