--- a/plugin/src/main/resources/META-INF/plugin.xml
+++ b/plugin/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <idea-plugin>
-    <id>org.jetbrains.research.bug-finder</id>
-    <name>Bug Finder</name>
+    <id>org.jetbrains.research.revizor</id>
+    <name>Revizor</name>
     <vendor>JetBrains Research</vendor>
 
     <description><![CDATA[
@@ -22,15 +22,15 @@
     <depends>com.intellij.modules.python</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <postStartupActivity implementation="org.jetbrains.research.plugin.ide.BugFinderStartupActivity"/>
+        <postStartupActivity implementation="org.jetbrains.research.plugin.ide.RevizorStartupActivity"/>
         <localInspection language="Python"
                          groupPath="Python"
-                         groupName="BugFinder plugin"
+                         groupName="Revizor plugin"
                          enabledByDefault="true"
                          level="WARNING"
-                         implementationClass="org.jetbrains.research.plugin.ide.BugFinderInspection"
-                         displayName="BugFinder"
-                         shortName="BugFinderInspection"/>
+                         implementationClass="org.jetbrains.research.plugin.ide.RevizorInspection"
+                         displayName="Revizor"
+                         shortName="RevizorInspection"/>
     </extensions>
 
 </idea-plugin>
